--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,17 @@
 ---
 ## General
-redis_exporter_version: 0.10.9
+redis_exporter_version: 1.3.1
 redis_exporter_release_system: linux-amd64
+
+# Package paths
+redis_exporter_release_name: "redis_exporter-v{{ redis_exporter_version }}.{{ redis_exporter_release_system }}"
+redis_exporter_package: "{{ redis_exporter_release_name}}.tar.gz"
+redis_exporter_url: "https://github.com/oliver006/redis_exporter/releases/download/v{{ redis_exporter_version }}/{{ redis_exporter_package }}"
+redis_exporter_download_path: /usr/src
+redis_exporter_package_path: "{{ redis_exporter_download_path }}/{{ redis_exporter_package }}"
+redis_exporter_src_bin: "{{ redis_exporter_download_path }}/{{ redis_exporter_release_name }}/redis_exporter"
+# Redis Exporter 0.x has a different packaging
+#redis_exporter_src_bin: "{{ redis_exporter_download_path }}/redis_exporter"
 
 # Set true to force the download and installation of the binary
 redis_exporter_force_reinstall: false
@@ -41,7 +51,8 @@ redis_exporter_options:
   - "{{ redis_exporter_check_keys | ternary('check-keys ' + redis_exporter_check_keys, '') }}"
   - "redis.addr {{ redis_exporter_redis_addr }}"
   - "{{ redis_exporter_redis_password | ternary('redis.password ' + redis_exporter_redis_password, '') }}"
-  - "redis.alias {{ redis_exporter_redis_alias }}"
   - "namespace {{ redis_exporter_redis_namespace }}"
   - "web.listen-address {{ redis_exporter_ip }}:{{ redis_exporter_port }}"
   - "web.telemetry-path /{{ redis_exporter_web_telemetry_path }}"
+#  redis.alias only for 0.x version https://github.com/oliver006/redis_exporter/pull/256
+#  - "redis.alias {{ redis_exporter_redis_alias }}"
