--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,11 @@ services:
 install:
   - pip install pipenv
   - pipenv sync
+env:
+  matrix:
+    - MOLECULE_DISTRO=debian:buster-slim
+    - MOLECULE_DISTRO=debian:stretch-slim
+    - MOLECULE_DISTRO=debian:jessie-slim
 script:
   - travis_wait 30 pipenv run molecule test
 
