--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -6,7 +6,7 @@ driver:
 lint:
   name: yamllint
 platforms:
-  - name: redis
+  - name: redisexporter
     groups:
       - redis
     image: ${MOLECULE_DISTRO:-debian:buster-slim}
@@ -19,6 +19,7 @@ platforms:
       - '/redis'
       - '/tmp'
     command: '/lib/systemd/systemd'
+    stop_signal: 'RTMIN+3'
 provisioner:
   name: ansible
   lint:
