--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -13,7 +13,7 @@
     shell: /usr/sbin/nologin
     createhome: no
 
-- name: REDIS_EXPORTER | Ensure skeleton paths
+- name: REDIS_EXPORTER | Ensure skeleton bin paths
   file:
     dest: "{{ item }}"
     owner: "{{ redis_exporter_user }}"
@@ -21,7 +21,17 @@
     state: directory
   with_items:
     - "{{ redis_exporter_bin_path }}"
+
+- name: REDIS_EXPORTER | Ensure skeleton log paths
+  file:
+    dest: "{{ item }}"
+    owner: "{{ redis_exporter_user }}"
+    group: "{{ redis_exporter_group }}"
+    state: directory
+  with_items:
     - "{{ redis_exporter_log_path }}"
+  when: redis_exporter_log_path is defined
+
 
 - name: REDIS_EXPORTER | Check redis_exporter version
   command: redis_exporter -version
