--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -15,6 +15,10 @@
     goss_url: "https://github.com/aelsabbahy/goss/releases/download/{{ goss_version }}/goss-linux-{{ goss_arch }}"
     goss_test_directory: /tmp
     goss_format: documentation
+
+  vars_files:
+    - ../../defaults/main.yml
+
   tasks:
     - name: Download and install Goss
       get_url:
@@ -27,12 +31,11 @@
       retries: 3
 
     - name: Copy Goss tests to remote
-      copy:
-        src: "{{ item }}"
+      template:
+        src: "{{ item }}.j2"
         dest: "{{ goss_test_directory }}/{{ item | basename }}"
       with_fileglob:
-        - "{{ lookup('env', 'MOLECULE_VERIFIER_TEST_DIRECTORY') }}/test_common.yml"
-        - "{{ lookup('env', 'MOLECULE_VERIFIER_TEST_DIRECTORY') }}/test_redis*.yml"
+        - "{{ lookup('env', 'MOLECULE_VERIFIER_TEST_DIRECTORY') }}/test_*.yml"
 
     - name: Register test files
       shell: "ls {{ goss_test_directory }}/test_*.yml"
