#15 test private tmp and molecule variables to group_vars

--- a/molecule/default/tests/test_redis_exporter.yml
+++ b/molecule/default/tests/test_redis_exporter.yml
@@ -40,3 +40,12 @@ file:
     exists: true
     filetype: file
 {% endif %}
+command:
+  private_tmp:
+    # required attributes
+    exit-status: 0
+    # defaults to hash key
+    exec: "systemctl cat redis_exporter.service"
+    # optional attributes
+    stdout:
+    - PrivateTmp={{ redis_exporter_private_tmp }}
