#18 Upgrade  molecule and goss versions

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,12 +2,13 @@
 
 galaxy_info:
   company: Idealista S.A.
+  author: idealista
   description: Prometheus Redis exporter
-  min_ansible_version: 2.2
+  min_ansible_version: 2.9.0
   license: Apache 2.0
   platforms:
     - name: Debian
       versions:
         - jessie
-  categories:
+  galaxy_tags:
     - monitoring
