--- a/tasks/service.yml
+++ b/tasks/service.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: REDIS_EXPORTER | Configuring service
-  systemd:
+  ansible.builtin.systemd:
     name: redis_exporter
     state: "{{ redis_exporter_service_state }}"
     enabled: "{{ redis_exporter_service_enabled }}"
